--- a/card.css
+++ b/card.css
@@ -4,7 +4,7 @@ display: flex;
 justify-content: center;
 align-items: center;
 height: 100vh;
-background:linear-gradient(135deg, #f5a623, #f29d77);
+background:linear-gradient(135deg, #6CAB51, #407629);
 margin: 0;
 overflow: hidden;
 }
@@ -12,20 +12,23 @@ overflow: hidden;
 .game_content{
 text-align: center;
 background-color: white;
-padding: 40px;
+padding: 60px;
 border-radius: 20px;
 box-shadow: 0 0 15px rgba(0,0,0,0.2);
-max-width: 360px;
+max-width: 600px;
+min-height:500px;
 margin-bottom: 60px;
+width: 100%;
 }
 
 .flashcard {
 width: 90%;
-height: 100px;
+height: 380px;
 position: relative;
 transform-style: preserve-3d;
 transition: transform 0.6s;
 margin: 0 auto;
+margin-bottom: 10px;
 }
 
 .flashcard.is-flipped{
@@ -50,19 +53,19 @@ transform: rotateY(180deg);
 }
 
 button {
-margin: 10px;
-padding: 12px 25px;
+margin: 5px;
+padding: 14px 35px;
 border: none;
 border-radius: 25px;
-background-color: #ff5722;
+background-color: #2D9037;
 color: white;
-font-size: 1.1em;
+font-size: 1.3em;
 cursor: pointer;
 transition: background-color 0.3s, transform 0.2s;
 }
 
 button:hover {
-background-color: #e64a19;
+background-color: #63C66D;
 }
 
 button:active{
