--- a/style.css
+++ b/style.css
@@ -91,17 +91,43 @@ body {
     color: #344a3d;
   }
   
-  .game-container {
+  .game-wrapper {
+    width: 45.1%;
+    height: 45rem;
+    margin: 0 auto; 
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
     gap: 20px;
-    margin-bottom: 30px;
+    justify-content: center;
+    align-items: flex-start;
+    overflow: hidden;
+    background-color: #89A15B;
+  }
+  
+  .gameoverall {
+    background-color: #89A15B;
+    width: 45.1%;
+    margin: auto;
+  }
+
+  .images-column {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+  }
+  
+  .words-column {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    justify-content: center;
   }
   
   .dropzone {
-    width: 150px;
-    height: 150px;
+    width: 100px; 
+    height: 100px; 
     border: 3px dashed #ccc;
     border-radius: 10px;
     padding: 10px;
@@ -121,24 +147,24 @@ body {
     background-color: #e0e0e0;
   }
   
-  .word-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 15px;
-  }
-  
   .draggable {
-    background-color: #89A15B;
+    background-color: #344a3d;
+    width: 100px;
+    height: 100px;
     color: white;
-    padding: 10px 15px;
+    padding: 10px 12px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     border-radius: 5px;
     cursor: grab;
     user-select: none;
     font-size: 20px;
+    margin: 0 auto;
   }
   
   .draggable:active {
     cursor: grabbing;
   }
+  
   
