--- a/index.css
+++ b/index.css
@@ -17,3 +17,8 @@
     display: grid;
     place-items: center;
 }
+#gameredirect {
+    border-radius: 100px;
+    background-color: rgba(255, 255, 255, 0);
+    border: 5px solid rgb(117, 165, 117);
+}
