--- a/vocalno.css
+++ b/vocalno.css
@@ -1,18 +1,157 @@
-.volcano-image {
-    width: auto;
-    height: 450px;
+#images {
+  position: relative;
 }
- h1 {
-      color: #344a3d;
-    }
- body {
-          margin: 0;
-          height: 100vh;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          background-color: white;
-          color: white;
-          font-family: Arial, sans-serif;
-          text-align: center;
- }
+#volcano-image {
+  position: absolute;
+  width: auto;
+  top: 300px;
+  left: 400px;
+  height: 450px;
+  z-index: -1;
+}
+h1 {
+  color: #344a3d;
+}
+body {
+  margin: 0;
+  height: 100vh;
+  background-color: rgb(255, 255, 255);
+  color: white;
+  font-family: Arial, sans-serif;
+  text-align: center;
+}
+#bakingsoda-image {
+  position: absolute;
+  top: 50px;
+  left: 700px;
+  z-index: 1;
+  height: 100px;
+  animation-duration: 20s;
+  animation-name: rotate;
+  animation-timing-function: ease;
+  animation-delay: 0s;
+  animation-iteration-count: 1;
+  animation-direction: normal;
+  animation-play-state: paused;
+  animation-fill-mode: forwards;
+  visibility: visible;
+}
+#vinegar-img {
+  position: absolute;
+  height: 150px;
+  z-index: 1;
+  top: 20px;
+  left: 670px;
+  animation-duration: 20s;
+  animation-name: rotate;
+  animation-timing-function: ease;
+  animation-delay: 10s;
+  animation-iteration-count: 1;
+  animation-direction: normal;
+  animation-play-state: paused;
+  visibility: hidden;
+}
+@keyframes rotate{
+  0% {
+    transform: rotate(0deg);
+    visibility: visible;
+  }
+  25%{
+    transform: rotate(180deg);
+    visibility: visible;
+  }
+  50% {
+    transform: rotate(180deg);
+    visibility: hidden;
+  }
+  100% {
+    transform: rotate(180deg);
+    visibility: hidden;
+  }
+}
+#lava{
+  position: absolute;
+  visibility: hidden;
+  top: 100px; /* Position lava */
+  left: 275px; /* Position lava */
+}
+#main {
+  clip-path: inset(0px 0px 0px 0px);
+  z-index: 10;
+  top: 100px; /* Position lava */
+  left: 275px; /* Position lava */
+  animation-name: flow;
+  animation-duration: 20s;
+  animation-timing-function: linear;
+  animation-delay: 20s;
+  animation-iteration-count: 1;
+  animation-direction: normal;
+  animation-play-state: paused;
+  animation-fill-mode: forwards;
+}
+#bakingsoda {
+  position: absolute;
+  clip-path: inset(0px 0px 0px 0px);
+  top: 0px;
+  left: 400px;
+  visibility: hidden;
+  z-index: -10;
+  animation-name: pourb;
+  animation-duration: 5s;
+  animation-timing-function: linear;
+  animation-delay: 3s;
+  animation-iteration-count: 1;
+  animation-direction: normal;
+  animation-play-state: paused;
+  animation-fill-mode: forwards;
+}
+@keyframes pourb {
+  0%{
+    height: 10px;
+    visibility: visible;
+  }
+  50% {
+    height: 310px;
+    visibility: visible;
+    opacity: 1;
+  }
+  100% {
+    height: 310px;
+    opacity: 0;
+  }
+}
+@keyframes flow {
+  0% {
+    height: 150px;
+    visibility: visible;
+  }
+  100% {
+    height: 2000px;
+    visibility: visible;
+  }
+}
+#vinegar-flow{
+  visibility: hidden;
+  z-index: -1;
+  animation-name: flowv;
+  animation-duration: 5s;
+  animation-timing-function: linear;
+  animation-delay: 15s;
+  animation-iteration-count: 1;
+  animation-direction: normal;
+  animation-play-state: paused;
+  animation-fill-mode: forwards;
+}
+@keyframes flowv {
+  0% {
+    height: 10px;
+    visibility: visible;
+  }
+  50% {
+    height: 320px;
+  }
+  100% {
+    height: 310px;
+    opacity: 0;
+  }
+}
